--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 services:
   - mysql
+  - postgresql
 language: python
 python:
   - 3.4.2
@@ -7,6 +8,9 @@ env:
   - DJANGO=1.8.5
 #install: // Install section is empty ATM, waiting for requirement analysis and tests
 before_script:
+  - psql -c 'create database Vigilate;' -U postgres
+  - psql -c 'CREATE USER admin;'
+  - psql -c 'GRANT ROOT to admin;'
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('toor') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
   - mysql -e 'create database Vigilate;'
 script:
