--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ before_script:
   - psql -c 'CREATE DATABASE Vigilate;' -U postgres
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('toor') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
   - mysql -e 'create database Vigilate;'
+  - ./install-pyargon2.sh
 script:
   - python manage.py test
