--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_script:
   - psql -c 'CREATE DATABASE Vigilate;' -U postgres
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('toor') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
   - mysql -e 'create database Vigilate;'
+  - sudo apt-get -qq update
+  - sudo apt-get install -y python3-dev
   - ./install-pyargon2.sh
 script:
   - python manage.py test
