--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ before_script:
   - sudo apt-get install -y python3-dev
   - sudo ./install-pyargon2.sh
 script:
-  - python3 manage.py test scanner_api/
+  - python manage.py test scanner_api/
