--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - postgresql
 language: python
 python:
-  - 3.5.0
+  - "3.5"
 env:
   - DJANGO=1.9
 #install: // Install section is empty ATM, waiting for requirement analysis and tests
@@ -17,4 +17,4 @@ before_script:
   - sudo apt-get install -y python3-dev
   - sudo ./install-pyargon2.sh
 script:
-  - python manage.py test scanner_api/
+  - python3 manage.py test scanner_api/
