--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ before_script:
   - mysql -e 'create database Vigilate;'
   - sudo apt-get -qq update
   - sudo apt-get install -y python3-dev
-  - sudo ./install-pyargon2.sh
+  - ./install-pyargon2.sh
 script:
   - python3 manage.py test scanner_api/
