Add coveralls to requirements + badge to README

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,8 @@ before_script:
   - python3 ./vfeedcli.py -u || echo ignore output of feedcli.py
 script:
   - python3 manage.py test vigilate_backend/
+
+after_success:
+  - if [[ $TRAVIS_PYTHON_VERSION == 3.5* ]]; then
+      coveralls;
+    fi
