auto-conf of scanner at dl time fix #41
This will update the default value for auth of the scanner before
sending it to the client
also add program_scanner has submodle and add it travis conf file

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ before_script:
   - mysql -e 'create database Vigilate;'
   - mkdir -p $HOME/lib/
   - INSTALL_DIR=$HOME/lib/ ./install-pyargon2.sh nosudo
+  - git submodule init
+  - git submodule update
 script:
   - python3 manage.py test vigilate_backend/
 
