--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 Django==1.9
 django-filter==0.11.0
-djangorestframework==3.2.4
+djangorestframework==3.4.4
 docutils==0.12
 Markdown==2.6.2
 MarkupSafe==0.23
-mysqlclient==1.3.6
+mysqlclient==1.3.7
 packaging==15.3
-psycopg2==2.6.1
+psycopg2==2.6.2
 Pygments==2.0.2
-PyMySQL==0.6.7
+PyMySQL==0.7.6
 python-dateutil==2.4.2
 pytz==2015.7
 requests==2.8.1
@@ -16,11 +16,11 @@ six==1.9.0
 snowballstemmer==1.2.0
 Sphinx==1.3.1
 sphinx-rtd-theme==0.1.9
-SQLAlchemy==1.0.8
-SQLAlchemy-Utils==0.31.0
+SQLAlchemy>=1.0.8
+SQLAlchemy-Utils>=0.31.0
 virtualenv==13.1.2
 Werkzeug==0.10.4
-django-nose==1.4.3
+django-nose==1.4.4
 coverage==4.1
 coveralls==1.1
 django-phonenumber-field==1.1.0
